Updated error handling for Itinerary Steps